--- a/notebooks/simulated_annealing.ipynb
+++ b/notebooks/simulated_annealing.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3bf00a20",
+   "metadata": {},
+   "source": [
+    "# Simulated Annealing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "3eeada08-98fc-4979-9a1d-84250a43786b",
@@ -70,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "460fb5da-c46f-43dd-97c2-60b2755735e5",
    "metadata": {},
    "outputs": [],
@@ -103,7 +111,7 @@
     "def simulated_annealing(a, w=True, max_iters=500000, temp=1.0, cooling_rate=0.995):\n",
     "    \"\"\"\n",
     "    Optimizes the row/column order using simulated annealing.\n",
-    "    \n",
+    "\n",
     "    Args:\n",
     "        a: The 2D numpy array.\n",
     "        w: Whether to use weighted nscore.\n",
@@ -120,7 +128,7 @@
     "        scorer = nscore\n",
     "\n",
     "    la = len(a)\n",
-    "    \n",
+    "\n",
     "    # Initial permutation (sorted by row sums as a heuristic)\n",
     "    current_perm = np.argsort(a.sum(axis=1))\n",
     "    best_perm = current_perm.copy()\n",
@@ -136,7 +144,7 @@
     "\n",
     "        # Compute new score\n",
     "        new_score = scorer(a[new_perm, :][:, new_perm])\n",
-    "        \n",
+    "\n",
     "        # Accept new permutation if it's better or with a probability\n",
     "        if new_score < best_score or np.exp((best_score - new_score) / temp) > np.random.rand():\n",
     "            current_perm = new_perm\n",
@@ -178,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "ef81c76a-f638-4476-89aa-e0e5896db091",
    "metadata": {},
    "outputs": [
@@ -197,7 +205,7 @@
     "plt.figure(figsize=(10, 8))\n",
     "\n",
     "# Plot heatmap\n",
-    "sns.heatmap((stab_no_diag.iloc[weighted_order, weighted_order]).replace(0, np.nan).astype('float'), \n",
+    "sns.heatmap((stab_no_diag.iloc[weighted_order, weighted_order]).replace(0, np.nan).astype('float'),\n",
     "            cmap=sns.light_palette(ugg.HEX[1], n_colors=100),\n",
     "            annot=True)\n",
     "\n",
